# phh-notification-system

./: .env.example  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/models/structs/: device_information_struct.rs  mod.rs  system_information_struct.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/informations/: device_information.rs  mod.rs  system_information.rs
src-tauri/src/modules/updaters/: latest_version_updater.rs  mod.rs
src-tauri/src/modules/windows/: mod.rs  set_default_size_window.rs
src/lib/component/global/AppToolBar/: AppToolBar.svelte
src/lib/component/global/AppToolBar/dialog/: ConfirmRequestVerificationDialog.svelte  WaitingRequestVerificationDialog.svelte
src/lib/env/: app.env.ts
src/lib/model/interface/: device-information.interface.ts  route.interface.ts  socket.interface.ts  system-information.interface.ts
src/lib/store/socket/: token-request.socket.svelte.ts
src/lib/store/startup/: get.startup.svelte.ts  set.startup.svelte.ts
src/lib/store/state/: app-data-dir.state.svelte.ts  device-information.state.svelte.ts
src/lib/util/browser/: text-to-speech.browser.ts
src/lib/util/tauri/: http.util.ts  information.util.ts  socket.util.ts  sql.util.ts  stronghold.util.ts  updater.util.ts
src/routes/: +layout.svelte
src/routes/app/: +page.svelte
src/routes/app/home/: +page.svelte
(+2 files in other folders)
